Bug 158339 - Text in shape in group on drawing canvas is imported as separate text box
Summary: Text in shape in group on drawing canvas is imported as separate text box
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Regina Henschel
URL:
Whiteboard: target:24.2.0
Keywords: implementationError
Depends on:
Blocks:
 
Reported: 2023-11-23 18:01 UTC by Regina Henschel
Modified: 2023-11-24 15:22 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
File to reproduce the problem (19.96 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2023-11-23 18:01 UTC, Regina Henschel
Details
Screenshot with without skia (9.79 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2023-11-23 21:30 UTC, m_a_riosv
Details
left LO master, right Word 365 (96.22 KB, image/png)
2023-11-23 22:36 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2023-11-23 18:01:24 UTC
Created attachment 191000 [details]
File to reproduce the problem

Open attached file. The text should be in the arrow and ellipse shape, respectively.
Such does not happen, if a shape lays directly on the drawing canvas.

This did not happen with the old VML import, however that had other bugs.
Comment 1 Regina Henschel 2023-11-23 18:02:03 UTC
It is an implementation error in https://gerrit.libreoffice.org/c/core/+/156629.
I will investigate the problem. But I have currently no idea about the reason. Thus any tips are welcome.
Comment 2 m_a_riosv 2023-11-23 21:30:04 UTC
Created attachment 191004 [details]
Screenshot with without skia

At opening there is not the gray background, after save the file the gray background is there, wihout change nothing.
I'm not clear if it sees how it should be.

The three screenshot are with two modes of skia, and without skia.
Comment 3 Regina Henschel 2023-11-23 22:36:38 UTC
Created attachment 191007 [details]
left LO master, right Word 365

Sorry, I should have added a screenshot of the problem immediately.
Comment 4 m_a_riosv 2023-11-24 00:38:32 UTC
Reproducible with or without skia.
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: bc5c767e9aebadf12aa6a181a6ce066cbfff71ad
CPU threads: 16; OS: Windows 10.0 Build 22631; UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL threaded

but works fine with without skia in
Version: 7.6.4.0.0+ (X86_64) / LibreOffice Community
Build ID: 3e180c01f0d304c7b19b623c083a1634079d5c87
CPU threads: 16; OS: Windows 10.0 Build 22631; UI render: default; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL threaded
Comment 5 Commit Notification 2023-11-24 14:16:10 UTC
Regina Henschel committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/63ecd577f5fe95feda0d1d8577a7d3b493999d78

tdf#158339 setFullWPGSupport to group shape in wpc

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.